force-app/main/default/objects/Test_Event__c/Test_Event__c.object-meta.xml
<CustomObject>
    <label>Test Event</label>
    <nameField>
        <displayFormat>EVT-{00000000}</displayFormat>
        <label>Test Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>