force-app/main/default/objects/Test_Event__c/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>