force-app/main/default/objects/Test_Event__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Test Events</relationshipLabel>
    <relationshipName>Test_Events</relationshipName>
    <type>Lookup</type>
</CustomField>